After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658178 - udpsrc: rough error reporting when using an invalid URI
udpsrc: rough error reporting when using an invalid URI
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-04 14:14 UTC by Vincent Penquerc'h
Modified: 2011-09-19 08:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
udpsrc: consider no protocol to be udp:// (989 bytes, patch)
2011-09-05 09:12 UTC, Vincent Penquerc'h
none Details | Review
udpsrc: error out when no protocol is specified in the uri (1.23 KB, patch)
2011-09-05 10:21 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-09-04 14:14:30 UTC
Will fix next week, I guess.


$ gst-launch-0.10 udpsrc uri=127.0.0.1:65500

(gst-launch-0.10:24952): GStreamer-CRITICAL **: gst_uri_get_protocol: assertion `gst_uri_is_valid (uri)' failed
Caught SIGSEGV accessing address (nil)
  • #0 ??
  • #1 ??
  • #2 ??
  • #3 ??
  • #4 ??
  • #5 ??
  • #6 ??
  • #7 ??
  • #8 ??
  • #9 ??
  • #10 ??

Comment 1 Vincent Penquerc'h 2011-09-05 09:12:23 UTC
Created attachment 195673 [details] [review]
udpsrc: consider no protocol to be udp://

It is certainly better than to crash, though a case could be made
for erroring out instead.
Comment 2 Sebastian Dröge (slomo) 2011-09-05 10:05:18 UTC
It shouldn't accept URIs without protocol at all because they're not valid URIs
Comment 3 Vincent Penquerc'h 2011-09-05 10:21:41 UTC
Created attachment 195678 [details] [review]
udpsrc: error out when no protocol is specified in the uri

It is certainly better than to crash.
Comment 4 Vincent Penquerc'h 2011-09-05 10:22:52 UTC
The case was very easy to make indeed :)

Done.
Comment 5 Sebastian Dröge (slomo) 2011-09-19 08:16:56 UTC
commit 3319737e5c1e9b7e9347e3468ed5ecdcb7d3553d
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Mon Sep 5 10:11:18 2011 +0100

    udpsrc: error out when no protocol is specified in the uri
    
    It is certainly better than to crash.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=658178